# grac

./: .gitignore  CMakeLists.txt  LICENSE  README.md  brainstorm,md  launch_scrcpy_stream.sh  package.xml
data/: along_y.npy  circle_xz.npy  circle_yz.npy  line_x.npy  lines_x.npy  still.npy  test.npy  trajectories.npy  trajectory_plotter.py
data/timestamps/: cartesian1.csv  graph_generator.sh  hand_mimic.csv  hand_mimic2.csv  hand_mimic_moving.csv  hand_mimic_still.csv  timestamp_database.csv  timestamp_dataset.csv  timestamp_dataset_backup.csv  timestamps_analisys.py  timestamps_analisys_v2.py
data/trajectories/: along_x.npy  along_z.npy  circle_xy.npy  circle_xz.npz  circle_xz_live.npz  generic.npz  line_x.npy  lines_y.npy  pattern.npy  pattern1.npy  scaling_demonstrator.py  scalings.npz  sim_live_comparison.py  square_xz.npy  square_xz.npz  square_xz_live.npz  square_xz_sim.npz  test.npz  test2.npy  test_hand.npz  test_o.npz  trajectory_plotter.py  trajectory_simulator.py
msg/: draw.msg  timestamps.msg
src/gesture_control/: CMakeLists.txt  action_client.py  camera_stream_node.py  detection_node.py  detection_node_3d.py  drawing_node.py  gesture_detector_node.py  interpretation_node.py  keyboard_node.py  keyboard_node_old.py  plotting_node.py  setup.py  timestamps_listener_node.py  trajectory_listener_node.py
src/gesture_control_nodes/: detection_node.py  plotting_node.py  timestamps_listener_node.py  trajectory_listener_node.py  trajectory_simulator.py
src/gesture_utils/: control_mode_selector.py  drawing_utils.py  framework_selector.py  gesture_detector.py  (+7 more)
(+216 files in other folders)
